server/src/editing/fixes/snapshots/janet_zed_server__editing__fixes__tests__create_function_names_arguments_that_are_not_new_symbols.snap
---
source: server/src/editing/fixes/tests.rs
expression: "(comb|ine a 1 a \"s\" (f b) b)"
---
----- BEFORE FIX
(combine a 1 a "s" (f b) b)
     ↑

----- AFTER FIX: Create function `combine`
(defn combine [a arg2 arg3 arg4 arg5 b])

(combine a 1 a "s" (f b) b)
