server/src/editing/fixes/snapshots/janet_zed_server__editing__fixes__tests__define_at_the_top_level.snap
---
source: server/src/editing/fixes/tests.rs
expression: "(def a 1)\n(print |x)"
---
----- BEFORE FIX
(def a 1)
(print x)
       ↑

----- AFTER FIX: Define `x`
(def a 1)
(def x nil)
(print x)
