server/src/editing/fixes/snapshots/janet_zed_server__editing__fixes__tests__define_in_a_let_body.snap
---
source: server/src/editing/fixes/tests.rs
expression: "(let [a 1]\n  (print a |b))"
---
----- BEFORE FIX
(let [a 1]
  (print a b))
           ↑

----- AFTER FIX: Define `b`
(let [a 1]
  (def b nil)
  (print a b))
