server/src/editing/fixes/snapshots/janet_zed_server__editing__fixes__tests__ignore_on_the_line_or_declare_at_the_top.snap
---
source: server/src/editing/fixes/tests.rs
expression: "(defn f [x]\n  (+ x |y))\n"
---
----- BEFORE FIX
(defn f [x]
  (+ x y))
       ↑


----- AFTER FIX: Ignore `y` on this line
(defn f [x]
  # janet-zed: ignore unknown-symbol y
  (+ x y))

----- AFTER FIX: Declare `y` in this file
# janet-zed: declare y
(defn f [x]
  (+ x y))
